[tool.poetry]
name = "python_concurrency_with_asyncio"
version = "0.1.0"
description = ""
authors = ["akitanak <akihito_tanaka@me.com>"]

[tool.poetry.dependencies]
python = "^3.8"
aiohttp = "^3.7.4"
asyncpg = "^0.22.0"
aiostream = "^0.4.2"
requests = "^2.25.1"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
rope = "^0.18.0"
flake8 = "^3.8.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
